@@ -9,14 +9,18 @@
 \description{This function makes the data balanced, i.e. each individual has the same time periods}
 
 \usage{
-\method{make.pbalanced}{pdata.frame}(x, balance.type = c("fill", "shared"), \dots)
-\method{make.pbalanced}{pseries}(x, balance.type = c("fill", "shared"), \dots)
-\method{make.pbalanced}{data.frame}(x, balance.type = c("fill", "shared"), index = NULL, \dots)
+\method{make.pbalanced}{pdata.frame}(x, 
+               balance.type = c("fill", "shared.times", "keep.times"), \dots)
+\method{make.pbalanced}{pseries}(x,
+               balance.type = c("fill", "shared.times", "keep.times"), \dots)
+\method{make.pbalanced}{data.frame}(x,
+               balance.type = c("fill", "shared.times", "keep.times"),
+               index = NULL, \dots)
 }
 
 \arguments{
  \item{x}{an object of class \code{pdata.frame}, \code{data.frame}, or \code{pseries};}
- \item{balance.type}{character, one of \code{"fill"}, \code{"shared"}, see Detail, }
+ \item{balance.type}{character, one of \code{"fill"}, \code{"shared.times"}, or \code{"keep.times"}, see \bold{Details}, }
  \item{index}{only relevant for \code{data.frame} interface; if \code{NULL}, the first two columns of the data.frame are 
               assumed to be the index variables; if not \code{NULL}, both dimensions ('individual', 'time') need to be 
               specified by \code{index} as character of length 2 for data frames, for further details see \code{\link{pdata.frame}},}
@@ -30,7 +34,7 @@ based on the index variables. The returned data are sorted as a stacked time ser
 
 \details{
  (p)data.frame and pseries objects are made balanced, meaning each individual has the same time periods.
- Depending on the value of \code{balance.type}, the balancing is done in two different ways:
+ Depending on the value of \code{balance.type}, the balancing is done in different ways:
  \itemize{
   \item \code{balance.type = "fill"} (default):
          The union of  available time periods over all individuals is taken (w/o \code{NA} values).
@@ -38,12 +42,17 @@ based on the index variables. The returned data are sorted as a stacked time ser
          inserted and filled with \code{NA} for the non--index variables (elements for a pseries).
          This means, only time periods present for at least one individual are inserted, if missing.
  
-  \item \code{balance.type = "shared"}:
+  \item \code{balance.type = "shared.times"}:
          The intersect of available time periods over all individuals is taken (w/o \code{NA} values). 
          Thus, time periods not available for all individuals are discarded (only time periods shared among
          all individuals are left in the result).
+ 
+ \item \code{balance.type = "keep.times"}:
+         All available time periods are kept and those individuals are dropped for which not all time
+         periods are available.
  }
-  The data are not necessarily made consecutive (regularly time series with distance 1), because balancedness does not imply
+ 
+ The data are not necessarily made consecutive (regularly time series with distance 1), because balancedness does not imply
  consecutiveness. For making the data consecutive, use \code{\link{make.pconsecutive}} (and, optionally, set argument 
  \code{balanced = TRUE} to make consecutive and balanced, see also \bold{Examples} for a comparison of the two functions.
  
@@ -77,9 +86,9 @@ nrow(Grunfeld)                            # 200 rows
 Grunfeld_missing_period <- Grunfeld[-2, ]
 pdim(Grunfeld_missing_period)$balanced    # check if balanced: FALSE
 make.pbalanced(Grunfeld_missing_period)   # make it balanced (by filling)
-make.pbalanced(Grunfeld_missing_period, balance.type = "shared") # (shared periods)
+make.pbalanced(Grunfeld_missing_period, balance.type = "shared.times") # (shared periods)
 nrow(make.pbalanced(Grunfeld_missing_period))
-nrow(make.pbalanced(Grunfeld_missing_period, balance.type = "shared"))
+nrow(make.pbalanced(Grunfeld_missing_period, balance.type = "shared.times"))
 
 # more complex data:
 # First, make data unbalanced (and non-consecutive) 
